--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -1,20 +1,16 @@
-/* TODO */
-body {
-  --color-primary: #009579;
-  --color-primary-dark: #007f67;
-  --color-secondary: #252c6a;
-  --color-error: #cc3333;
-  --color-success: #4bb544;
-  --border-radius: 4px;
+* {
+  box-sizing: border-box;
+}
 
+body {
+  background: #80cdf7;
   margin: 0px;
   height: 100vh;
   display: flex;
-  /* flex-direction: column; */
   justify-content: space-around;
-  align-items: center;
-  justify-items: center;
-  font-size: 18px;
-  /* background: url(./img/background.jpg);
-  background-size: cover; */
+  place-items: center;
+}
+
+.btn {
+  margin: 2px 0;
 }
